Document the new "tmp" special command.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -1,2 +1,6 @@
 This is the draft release notes for 0.18.0, scheduled to be released around
 2022-03-01.
+
+# Notable new features
+
+-   A new `tmp` special command for doing temporary assignments.
