--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -1,6 +1,11 @@
 This is the draft release notes for 0.18.0, scheduled to be released around
 2022-03-01.
 
+# Notable bugfixes
+
+-   The output longer than terminal width is now shown fully on Windows
+    Terminal.
+
 # Notable new features
 
 -   A new `tmp` special command for doing temporary assignments.
