Use (*Evaler).Chdir for changing directory in navigation mode.
This will run the hooks and update $E:PWD correctly.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -6,6 +6,9 @@ This is the draft release notes for 0.18.0, scheduled to be released around
 -   The output longer than terminal width is now shown fully on Windows
     Terminal.
 
+-   Changing directories in the navigation mode now correctly runs hooks and
+    updates `$E:PWD`.
+
 # Notable new features
 
 -   A new `tmp` special command for doing temporary assignments.
