--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -12,3 +12,6 @@ This is the draft release notes for 0.18.0, scheduled to be released around
 # Notable new features
 
 -   A new `tmp` special command for doing temporary assignments.
+
+-   A new `call` command to call a command, using a list for and a map for
+    options.
