New flag module.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -11,6 +11,8 @@ This is the draft release notes for 0.18.0, scheduled to be released around
 
 # Notable new features
 
+-   A new `flag:` module for parsing command-line flags.
+
 -   A new `tmp` special command for doing temporary assignments.
 
 -   A new `call` command to call a command, using a list for and a map for
