Change \xff and \x377 to encode bytes rather than codepoints.
It was an oversight to make them encode codepoints; they were always intended to
be equivalent to their Go counterparts, which encode bytes and can be used to
write arbitrary byte sequences that are not necessarily valid UTF-8 sequences.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -1,6 +1,12 @@
 This is the draft release notes for 0.18.0, scheduled to be released around
 2022-03-01.
 
+# Breaking changes
+
+-   Within double quotes, `\x` followed by two hexadecimal digits and `\`
+    followed by three octal digits now encode an individual byte, rather than a
+    codepoint.
+
 # Notable bugfixes
 
 -   The output longer than terminal width is now shown fully on Windows
