Deprecate the legacy temporary assignment syntax from 0.18.0.
This addresses #1114.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -7,6 +7,16 @@ This is the draft release notes for 0.18.0, scheduled to be released around
     followed by three octal digits now encode an individual byte, rather than a
     codepoint.
 
+# Deprecated features
+
+Deprecated features will be removed in 0.19.0.
+
+The following deprecated features trigger a warning whenever the code is parsed
+or compiled, even if it is not executed:
+
+-   The legacy temporary assignment syntax (e.g. `a=foo echo $a`) is deprecated.
+    Use the new `tmp` command instead (e.g. `tmp a = foo; echo $a`).
+
 # Notable bugfixes
 
 -   The output longer than terminal width is now shown fully on Windows
