Remove support for the legacy lambda syntax.
This fixes #664.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -3,6 +3,8 @@ This is the draft release notes for 0.18.0, scheduled to be released around
 
 # Breaking changes
 
+-   All features deprecated in 0.17.0 have been removed.
+
 -   Within double quotes, `\x` followed by two hexadecimal digits and `\`
     followed by three octal digits now encode an individual byte, rather than a
     codepoint.
