Add a new "defer" command.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -33,5 +33,8 @@ or compiled, even if it is not executed:
 
 -   A new `tmp` special command for doing temporary assignments.
 
+-   A new `defer` command to schedule a function to be run when the current
+    closure finishes execution.
+
 -   A new `call` command to call a command, using a list for and a map for
     options.
