Make the LSP server part of the Elvish binary.
Also add tests.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -29,6 +29,9 @@ or compiled, even if it is not executed:
 
 # Notable new features
 
+-   Elvish now ships a builtin language server that can be started with
+    `elvish -lsp`.
+
 -   A new `flag:` module for parsing command-line flags.
 
 -   A new `tmp` special command for doing temporary assignments.
