website: Mark up keys with the standard <kbd> tag.

--- a/website/blog/0.11-release-notes.md
+++ b/website/blog/0.11-release-notes.md
@@ -114,8 +114,8 @@ As usual, prebuilt binaries can be found in [get](../get/).
 -   Ctrl-H is now treated the same as Backspace
     ([#539](https://github.com/elves/elvish/issues/539)).
 
--   It is now possible to scroll file previews with
-    <span class="key">Alt-Up</span> and <span class="key">Alt-Down</span>.
+-   It is now possible to scroll file previews with <kbd>Alt-Up</kbd> and
+    <kbd>Alt-Down</kbd>.
 
 -   The height the editor can take up can now be restricted with
     [`$edit:max-height`](../ref/edit.html#editmax-height).
