Update doc for changes in the try syntax.

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -9,6 +9,10 @@ This is the draft release notes for 0.18.0, scheduled to be released around
     followed by three octal digits now encode an individual byte, rather than a
     codepoint.
 
+-   Using a lone `try` without `except` or `finally` is now forbidden; this does
+    not do anything useful and is almost certainly an incorrect attempt to
+    suppress an exception.
+
 # Deprecated features
 
 Deprecated features will be removed in 0.19.0.
@@ -18,6 +22,9 @@ or compiled, even if it is not executed:
 
 -   The legacy temporary assignment syntax (e.g. `a=foo echo $a`) is deprecated.
     Use the new `tmp` command instead (e.g. `tmp a = foo; echo $a`).
+
+-   The clause to catch exceptions in the `try` special command is now spelt
+    with `catch`; the old keyword `except` is deprecated.
 
 # Notable bugfixes
 
