--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -5,6 +5,24 @@ This is the draft release notes for 0.19.0, scheduled to be released around
 
 # Deprecated features
 
+Deprecated features will be removed in 0.20.0.
+
+The following deprecated features trigger a warning whenever the code is parsed
+and compiled, even if it is not executed:
+
+-   The `float64` command is now deprecated. Use `num` for constructing a typed
+    number, or `inexact-num` for constructing an inexact number.
+
+    The documentation has advertised it as deprecated since the 0.16.0 release,
+    but deprecation warnings were never added.
+
 # Notable bugfixes
 
 # Notable new features
+
+-   A new `inexact-num` converts its argument to an inexact number.
+
+    It is functionally identical to the now deprecated `float64` command since
+    the Go float64 type is the only underlying inexact number type for now. Its
+    behavior may change in future if there are more underlying types for inexact
+    numbers.
