--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -1,5 +1,5 @@
 This is the draft release notes for 0.19.0, scheduled to be released around
-2020-07-01.
+2022-07-01.
 
 # Breaking changes
 
@@ -26,3 +26,6 @@ and compiled, even if it is not executed:
     the Go float64 type is the only underlying inexact number type for now. Its
     behavior may change in future if there are more underlying types for inexact
     numbers.
+
+-   A new type of interactive abbreviation: `edit:command-abbr`
+    ([#1472](https://b.elv.sh/1472)).
