Document fix of #1448 in 0.19.0 release notes.

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -18,6 +18,9 @@ and compiled, even if it is not executed:
 
 # Notable bugfixes
 
+-   Temporary assignment on an unset environment variables no longer leave it
+    set to an empty string ([#1448](https://b.elv.sh/1448)).
+
 # Notable new features
 
 -   A new `inexact-num` converts its argument to an inexact number.
