Add to release notes draft

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -32,3 +32,6 @@ and compiled, even if it is not executed:
 
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
+
+-   New control flow conditional: `unless`
+    ([#1555](https://b.elv.sh/1555)).
