--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -33,5 +33,4 @@ and compiled, even if it is not executed:
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
 
--   New control flow conditional: `unless`
-    ([#1555](https://b.elv.sh/1555)).
+-   A new control flow conditional `unless` ([#1555](https://b.elv.sh/1555)).
