--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -32,3 +32,7 @@ and compiled, even if it is not executed:
 
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
+
+-   Three new variables exposing locations that Elvish uses for different types
+    of files: `platform:config-home`, `platform:data-home` and
+    `platform:state-home` ([#1385](https://b.elv.sh/1385)).
