--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -32,3 +32,6 @@ and compiled, even if it is not executed:
 
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
+
+-   A new `path:join` command and `path:separator` and `path:list-separator`
+    variables ([#1562](https://b.elv.sh/1562)).
