Fix glob expansion that includes broken symlinks
Glob expansion should use os.Lstat rather than os.Stat so that broken
symlinks don't stop glob expansion. It's not the place of glob expansion
to decide if a particular path is good.

The symlink test cases and logic were borrowed from
pkg/mods/path/path_test.go.

Fixes #1240

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -21,6 +21,9 @@ and compiled, even if it is not executed:
 -   Temporary assignment on an unset environment variables no longer leave it
     set to an empty string ([#1448](https://b.elv.sh/1448)).
 
+-   Glob expansion that includes broken symlinks no longer short-circuits the
+    expansion ([#1240](https://b.elv.sh/1240)).
+
 # Notable new features
 
 -   A new `inexact-num` converts its argument to an inexact number.
