--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -35,3 +35,5 @@ and compiled, even if it is not executed:
 
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
+
+-   A new `runtime:elvish-path` variable ([#1423](https://b.elv.sh/1423)).
