Implement a `dedupe` command
Resolves #1453

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -30,5 +30,8 @@ and compiled, even if it is not executed:
     behavior may change in future if there are more underlying types for inexact
     numbers.
 
+-   A new `dedupe` command to eliminate consecutive duplicate values
+    ([#1453](https://b.elv.sh/1453)).
+
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
