Implement a `help` command
Resolves #1432

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -32,3 +32,6 @@ and compiled, even if it is not executed:
 
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
+
+-   A new `help` command to search and display documentation for builtin
+    functions and variables ([#1432](https://b.elv.sh/1432)).
