--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -56,3 +56,6 @@ and compiled, even if it is not executed:
 
 -   A new `compact` command that replaces consecutive runs of equal values with
     a single copy, similar to the Unix `uniq` command.
+
+-   The `order` command has a new `&key` option
+    ([#1570](https://b.elv.sh/1570)).
