--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -3,6 +3,9 @@ This is the draft release notes for 0.19.0, scheduled to be released around
 
 # Breaking changes
 
+-   When a `styled` or `styled-segment` is printed to terminal, the resulting
+    sequence will now always ignore any existing SGR state.
+
 # Deprecated features
 
 Deprecated features will be removed in 0.20.0.
