Add a `benchmark` command
Resolves #1586

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -56,3 +56,5 @@ and compiled, even if it is not executed:
 
 -   A new `compact` command that replaces consecutive runs of equal values with
     a single copy, similar to the Unix `uniq` command.
+
+-   A new `benchmark` command has been added ([#1586](https://b.elv.sh/1586)).
