--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -6,6 +6,12 @@ This is the draft release notes for 0.19.0, scheduled to be released around
 -   When a `styled` or `styled-segment` is printed to terminal, the resulting
     sequence will now always ignore any existing SGR state.
 
+-   Symbolic links are now always treated as ordinary files during wildcard
+    expansions.
+
+    As a side effect, this change fixes a bug where broken symbolic links can
+    terminate a wildcard expansion prematurely ([#1240](https://b.elv.sh/1240)).
+
 # Deprecated features
 
 Deprecated features will be removed in 0.20.0.
@@ -23,9 +29,6 @@ and compiled, even if it is not executed:
 
 -   Temporary assignment on an unset environment variables no longer leave it
     set to an empty string ([#1448](https://b.elv.sh/1448)).
-
--   Glob expansion that includes broken symlinks no longer short-circuits the
-    expansion ([#1240](https://b.elv.sh/1240)).
 
 # Notable new features
 
