New "compact" command.
This fixes #1453.

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -45,4 +45,8 @@ and compiled, even if it is not executed:
 -   A new `path:join` command and `path:separator` and `path:list-separator`
     variables ([#1562](https://b.elv.sh/1562)).
 
--   A new `runtime:elvish-path` variable ([#1423](https://b.elv.sh/1423)).
+-   A new `runtime:` module that contains paths important for the Elvish runtime
+    ([#1385](https://b.elv.sh/1385), [#1423](https://b.elv.sh/1423)).
+
+-   A new `compact` command that replaces consecutive runs of equal values with
+    a single copy, similar to the Unix `uniq` command.
