Support comparing booleans (#1588)
Fixes #1585

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -42,6 +42,11 @@ and compiled, even if it is not executed:
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
 
+
+-   The `compare` command now supports comparing booleans
+    ([#1585](https://b.elv.sh/1585)). This also means that the `order` command
+    can now sort booleans.
+
 -   A new `path:join` command and `path:separator` and `path:list-separator`
     variables ([#1562](https://b.elv.sh/1562)).
 
