--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -42,10 +42,8 @@ and compiled, even if it is not executed:
 -   A new type of interactive abbreviation: `edit:command-abbr`
     ([#1472](https://b.elv.sh/1472)).
 
-
--   The `compare` command now supports comparing booleans
-    ([#1585](https://b.elv.sh/1585)). This also means that the `order` command
-    can now sort booleans.
+-   The `order` and `compare` commands now support boolean values
+    ([#1585](https://b.elv.sh/1585)).
 
 -   A new `path:join` command and `path:separator` and `path:list-separator`
     variables ([#1562](https://b.elv.sh/1562)).
