Add support for completing invocations of local executables

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -30,6 +30,9 @@ and compiled, even if it is not executed:
 -   Broken symbolic links no longer terminate a wildcard expansion prematurely
     ([#1240](https://b.elv.sh/1240)).
 
+-   On Windows, command completion for executables now also works for local
+    files
+
 # Notable new features
 
 -   A new `inexact-num` converts its argument to an inexact number.
