--- a/website/blog/0.11-release-notes.md
+++ b/website/blog/0.11-release-notes.md
@@ -130,7 +130,7 @@ As usual, prebuilt binaries can be found in [get](../get/).
 -   Elvish now handles SIGHUP by relaying it to the entire process group
     ([#494](https://github.com/elves/elvish/issues/494)).
 
--   The daemon now detects the path of the Elvish executable more reliabily,
+-   The daemon now detects the path of the Elvish executable more reliably,
     notably when Elvish is used as login shell
     ([#496](https://github.com/elves/elvish/issues/496)).
 
