--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -9,6 +9,8 @@ This is the draft release notes for 0.19.0, scheduled to be released around
 -   Symbolic links are now always treated as ordinary files by the global
     modifiers `type:dir` and `type:regular` in wildcard expansions.
 
+-   Support for shared vars has been removed; e.g., `store:shared-var`.
+
 # Deprecated features
 
 Deprecated features will be removed in 0.20.0.
