Format Markdown files with elvmdfmt.

--- a/website/blog/0.11-release-notes.md
+++ b/website/blog/0.11-release-notes.md
@@ -95,8 +95,8 @@ As usual, prebuilt binaries can be found in [get](../get/).
 ## Editor
 
 -   A maximum wait time can be specified with
-    [\$edit:-prompts-max-wait](../ref/edit.html#edit-prompts-max-wait) to
-    prevent slow prompt functions from blocking UI updates
+    [$edit:-prompts-max-wait](../ref/edit.html#edit-prompts-max-wait) to prevent
+    slow prompt functions from blocking UI updates
     ([#482](https://github.com/elves/elvish/issues/482)).
 
 -   Execution of hook functions are now correctly isolated
