Issue 1570 order key option (#1616)
* Allow $nil for Callable options

Related #1570

* Add a `&key` option to the `order` command.

Resolves #1570

Co-authored-by: Qi Xiao <xiaq@users.noreply.github.com>

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -60,4 +60,7 @@ and compiled, even if it is not executed:
 -   A new `compact` command that replaces consecutive runs of equal values with
     a single copy, similar to the Unix `uniq` command.
 
+-   The `order` command has a new `&key` option
+    ([#1570](https://b.elv.sh/1570)).
+
 -   A new `benchmark` command has been added ([#1586](https://b.elv.sh/1586)).
