pkg/edit/highlight: Handle multiple compilation errors.
Also document the change in the release notes.

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -64,3 +64,8 @@ and compiled, even if it is not executed:
     ([#1570](https://b.elv.sh/1570)).
 
 -   A new `benchmark` command has been added ([#1586](https://b.elv.sh/1586)).
+
+-   When checking compilation errors, Elvish no longer stops after the first
+    error found. For example, if `$a` and `$b` are both not defined,
+    `echo $a $b` now yields two errors. This applies to both the interactive
+    REPL and `elvish -compile-only`.
