pkg/edit: Show autofix commands, and support applying it.

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -69,3 +69,7 @@ and compiled, even if it is not executed:
     error found. For example, if `$a` and `$b` are both not defined,
     `echo $a $b` now yields two errors. This applies to both the interactive
     REPL and `elvish -compile-only`.
+
+-   When using an unimported builtin modules from the REPL, the REPL now shows
+    the `use` command needed to import it, which can be executed from a key
+    binding. This functionality is bound to Ctrl-A by default.
