Add a doc: module for accessing documentation of Elvish modules.
This fixes #1432.

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -38,6 +38,8 @@ and compiled, even if it is not executed:
 
 # Notable new features
 
+-   A new `doc` module provides access to the documentation of builtin modules.
+
 -   A new `inexact-num` converts its argument to an inexact number.
 
     It is functionally identical to the now deprecated `float64` command since
