Wording changes for the release notes on the new variables in $path:.

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -41,9 +41,9 @@ This is the draft release notes for 0.19.0, scheduled to be released around
     the `use` command needed to import it, which can be executed from a key
     binding. This functionality is bound to Ctrl-A by default.
 
--   New variables exposing the console tty and null device in an OS agnostic
-    fashion: `path:dev-tty` and `path:dev-null`. Corresponding to `/dev/tty` and
-    `/dev/null` on UNIX like systems, and `CON` and `NUL` on Windows
+-   New variables exposing the terminal and null device in an OS-agnostic
+    fashion: `$path:dev-tty` and `$path:dev-null`. They are `/dev/tty` and
+    `/dev/null` on Unix, and `CON` and `NUL` on Windows
     ([#1633](https://b.elv.sh/1633)).
 
 # Breaking changes
