Add a new "conj" command for appending values to a list.

--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -5,6 +5,9 @@ This is the draft release notes for 0.19.0, scheduled to be released around
 
 -   A new `doc` module provides access to the documentation of builtin modules.
 
+-   A new `conj` command "appends" values to a list, and has a guaranteed time
+    complexity independent of the size of the list.
+
 -   A new `inexact-num` converts its argument to an inexact number.
 
     It is functionally identical to the now deprecated `float64` command since
