--- a/0.19.0-release-notes.md
+++ b/0.19.0-release-notes.md
@@ -60,6 +60,9 @@ This is the draft release notes for 0.19.0, scheduled to be released around
 -   Support for shared vars has been removed, along with its API
     (`store:shared-var`, `store:set-shared-var` and `store:del-shared-var`).
 
+-   The `try` command no longer supports the `except` keyword. It has been
+    superseded by the `catch` keyword.
+
 # Deprecated features
 
 Deprecated features will be removed in 0.20.0.
