--- a/website/blog/0.19.1-release-notes.md
+++ b/website/blog/0.19.1-release-notes.md
@@ -1,5 +1,13 @@
-This is the draft release notes for 0.19.0, scheduled to be released around
-2022-07-01.
+Elvish 0.19.1 has been released on 2023-03-05, almost a year after 0.18.0,
+bringing new features and bugfixes.
+
+As usual, [prebuilt binaries](https://elv.sh/get) are offered for most common
+platforms.
+
+**Note**: The 0.19.0 version was tagged prematurely by mistake, but it has been
+picked up by some package managers. As a result, the 0.19.0 version is
+considered to be "skipped" officially. If your package manager provides a 0.19.0
+version, it is probably identical to 0.19.1 in functionalities.
 
 # Notable new features
 
@@ -85,4 +93,4 @@ and compiled, even if it is not executed:
     ([#1240](https://b.elv.sh/1240)).
 
 -   On Windows, command completion for executables now also works for local
-    files
+    files.
