--- a/website/blog/0.19.1-release-notes.md
+++ b/website/blog/0.19.1-release-notes.md
@@ -9,6 +9,10 @@ picked up by some package managers. As a result, the 0.19.0 version is
 considered to be "skipped" officially. If your package manager provides a 0.19.0
 version, it is probably identical to 0.19.1 in functionalities.
 
+**Note 2**: The commit tagged 0.19.1 would advertise itself as 0.19.0 when
+built. To fix this inconsistency, 0.19.2 was tagged with the correct version
+information.
+
 # Notable new features
 
 -   A new `doc` module provides access to the documentation of builtin modules.
