Implement `os:stat`
Implement an `os:stat` command to provide detailed information about a
file system path. This provides a more general API than builtins like
`path:is-dir` and `path:is-regular`. Making it possible to test many
other path attributes. I didn't deprecate those commands because they
are used often enough it doesn't make sense to deprecate them and force
users to use a more general mechanism (at least at this time).

In theory the `os:stat` command introduced by this change allows an
Elvish implementation of something like the Unix `ls`, or Windows `dir`,
command. However, my primary motivation is to make some unit tests I
will introduce in a related change easier to write.

The introduction of a `Time` type serves only to make it possible to
display filesystem timestamps. More functionality involving those
timestamps depends on https://b.elv.sh/1030.

Related: #1659

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -25,6 +25,8 @@ Draft release notes for Elvish 0.20.0.
 -   The language server now supports showing the documentation of builtin
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
 
+-   A new `os:stat` command ([#1659](https://b.elv.sh/1659)).
+
 # Notable bugfixes
 
 -   `has-value $li $v` now works correctly when `$li` is a list and `$v` is a
