Implement `os:chmod`
Related: #1659

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -29,6 +29,8 @@ Draft release notes for Elvish 0.20.0.
     variable. Builtin UI elements as well as styled texts will no have colors if
     it is set and non-empty.
 
+-   A new `os:chmod` command ([#1659](https://b.elv.sh/1659)).
+
 # Notable bugfixes
 
 -   `has-value $li $v` now works correctly when `$li` is a list and `$v` is a
