--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -2,6 +2,9 @@ Draft release notes for Elvish 0.20.0.
 
 # Notable new features
 
+-   The `peach` command now has a `&num-workers` option
+    ([#648](https://github.com/elves/elvish/issues/648)).
+
 # Breaking changes
 
 -   The `except` keyword in the `try` command was deprecated since 0.18.0 and is
