--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -7,6 +7,14 @@ Draft release notes for Elvish 0.20.0.
 -   The language server now supports showing the documentation of builtin
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
 
+# Notable fixes and enhancements
+
+-   The `pprint` and `repr` commands now sort map keys
+    ([#1495](https://b.elv.sh/1495)).
+
+-   The `compare` and `order` commands have a new `&types` option to order
+    otherwise uncomparable types.
+
 # Breaking changes
 
 -   The `except` keyword in the `try` command was deprecated since 0.18.0 and is
