New "os" module.
This addresses #1659.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -2,6 +2,8 @@ Draft release notes for Elvish 0.20.0.
 
 # Notable new features
 
+-   A new `os:` module providing access to operating system functionality.
+
 -   The `peach` command now has a `&num-workers` option
     ([#648](https://github.com/elves/elvish/issues/648)).
 
