--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -9,6 +9,9 @@ Draft release notes for Elvish 0.20.0.
 
 -   A new `str:fields` command ([#1689](https://b.elv.sh/1689)).
 
+-   The `order` and `compare` commands now support a `&total` option, which
+    allows sorting and comparing values of mixed types.
+
 -   The language server now supports showing the documentation of builtin
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
 
