pkg/eval: Fix the equality test in "has-value".
Previously Go's == was used to test for equality when the container is not a
map, which is more strict when Elvish's normal equality test. For example,
"has-value [[foo]] [foo]" used to output false, rather than the expected true.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -15,6 +15,11 @@ Draft release notes for Elvish 0.20.0.
 -   The language server now supports showing the documentation of builtin
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
 
+# Notable bugfixes
+
+-   `has-value $li $v` now works correctly when `$li` is a list and `$v` is a
+    composite value, like a map or a list.
+
 # Breaking changes
 
 -   The `except` keyword in the `try` command was deprecated since 0.18.0 and is
