pkg/eval/vals: Make Repr sort map keys before printing.
This addresses #1495.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -4,6 +4,8 @@ Draft release notes for Elvish 0.20.0.
 
 -   A new `os:` module providing access to operating system functionality.
 
+-   Maps now have their keys sorted when printed.
+
 -   The `peach` command now has a `&num-workers` option
     ([#648](https://github.com/elves/elvish/issues/648)).
 
