pkg/eval: Use json.Number in from-json.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -9,6 +9,9 @@ Draft release notes for Elvish 0.20.0.
 -   The `peach` command now has a `&num-workers` option
     ([#648](https://github.com/elves/elvish/issues/648)).
 
+-   The `from-json` command now supports integers of arbitrary precision, and
+    outputs them as exact integers rather than inexact floats.
+
 -   A new `str:fields` command ([#1689](https://b.elv.sh/1689)).
 
 -   The `order` and `compare` commands now support a `&total` option, which
