Fix the hash code of maps.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -25,6 +25,9 @@ Draft release notes for Elvish 0.20.0.
 -   `has-value $li $v` now works correctly when `$li` is a list and `$v` is a
     composite value, like a map or a list.
 
+-   A bug with how the hash code of a map was computed could lead to unexpected
+    results when using maps as map keys; it has now been fixed.
+
 # Breaking changes
 
 -   The `except` keyword in the `try` command was deprecated since 0.18.0 and is
