--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -20,6 +20,8 @@ Draft release notes for Elvish 0.20.0.
 -   The language server now supports showing the documentation of builtin
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
 
+-   A new `read-bytes` command for reading a fixed number of bytes.
+
 # Notable bugfixes
 
 -   `has-value $li $v` now works correctly when `$li` is a list and `$v` is a
