--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -12,6 +12,8 @@ Draft release notes for Elvish 0.20.0.
 -   The `from-json` command now supports integers of arbitrary precision, and
     outputs them as exact integers rather than inexact floats.
 
+-   A new `file:open-output` command.
+
 -   A new `str:fields` command ([#1689](https://b.elv.sh/1689)).
 
 -   The `order` and `compare` commands now support a `&total` option, which
