Add file:seek and file:tell.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -4,6 +4,11 @@ Draft release notes for Elvish 0.20.0.
 
 -   A new `os:` module providing access to operating system functionality.
 
+-   A new `read-bytes` command for reading a fixed number of bytes.
+
+-   New commands in the `file:` module: `file:open-output`, `file:seek` and
+    `file:tell`.
+
 -   Maps now have their keys sorted when printed.
 
 -   The `peach` command now has a `&num-workers` option
@@ -12,8 +17,6 @@ Draft release notes for Elvish 0.20.0.
 -   The `from-json` command now supports integers of arbitrary precision, and
     outputs them as exact integers rather than inexact floats.
 
--   A new `file:open-output` command.
-
 -   A new `str:fields` command ([#1689](https://b.elv.sh/1689)).
 
 -   The `order` and `compare` commands now support a `&total` option, which
@@ -21,8 +24,6 @@ Draft release notes for Elvish 0.20.0.
 
 -   The language server now supports showing the documentation of builtin
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
-
--   A new `read-bytes` command for reading a fixed number of bytes.
 
 # Notable bugfixes
 
