Test and document NO_COLOR support.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -25,6 +25,10 @@ Draft release notes for Elvish 0.20.0.
 -   The language server now supports showing the documentation of builtin
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
 
+-   Elvish now respects the [`NO_COLOR`](https://no-color.org) environment
+    variable. Builtin UI elements as well as styled texts will no have colors if
+    it is set and non-empty.
+
 # Notable bugfixes
 
 -   `has-value $li $v` now works correctly when `$li` is a list and `$v` is a
