Document deprecation of eawk and removal of float64 in release notes.

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -41,3 +41,16 @@ Draft release notes for Elvish 0.20.0.
 
 -   The `except` keyword in the `try` command was deprecated since 0.18.0 and is
     now removed. Use `catch` instead.
+
+-   The `float64` command was deprecated since 0.16.0 and emitted deprecation
+    warnings since 0.19.1, and is now removed. Use `num` or `inexact-num`
+    instead.
+
+# Deprecated features
+
+Deprecated features will be removed in 0.21.0.
+
+The following deprecated features trigger a warning whenever the code is parsed
+and compiled, even if it is not executed:
+
+-   The `eawk` command is now deprecated. Use `re:awk` instead.
