Elminate implicit `cd`
Replace the CLI implicit `cd` behavior with location mode support for
literal directory paths.

Fixes #1099

--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -46,6 +46,9 @@ Draft release notes for Elvish 0.20.0.
     warnings since 0.19.1, and is now removed. Use `num` or `inexact-num`
     instead.
 
+-   The implicit cd feature has been removed and replaced by the ability to type
+    a literal path in location mode ([#1099](https://b.elv.sh/1099)).
+
 # Deprecated features
 
 Deprecated features will be removed in 0.21.0.
