--- a/0.20.0-release-notes.md
+++ b/0.20.0-release-notes.md
@@ -26,8 +26,8 @@ Draft release notes for Elvish 0.20.0.
     functions and variables on hover ([#1684](https://b.elv.sh/1684)).
 
 -   Elvish now respects the [`NO_COLOR`](https://no-color.org) environment
-    variable. Builtin UI elements as well as styled texts will no have colors if
-    it is set and non-empty.
+    variable. Builtin UI elements as well as styled texts will not have colors
+    if it is set and non-empty.
 
 # Notable bugfixes
 
