Publish release notes and download links for 0.20.0.

--- a/website/blog/0.20.0-release-notes.md
+++ b/website/blog/0.20.0-release-notes.md
@@ -1,4 +1,8 @@
-Draft release notes for Elvish 0.20.0.
+Elvish 0.20.0 has been released on 2024-02-11, 11 months after 0.19.1, bringing
+new features and bugfixes.
+
+As usual, [prebuilt binaries](https://elv.sh/get) are offered for most common
+platforms.
 
 # Notable new features
 
