pkg/eval: Change != and not-eq to only accept two arguments.
The !=s command already only accepts two arguments.

This fixes #1767.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -1,3 +1,6 @@
 # Breaking changes
 
 -   Support for the legacy `~/.elvish` directory has been removed.
+
+-   The commands `!=`, `!=s` and `not-eq` now only accepts two arguments
+    ([#1767](https://b.elv.sh/1767)).
