--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -1,3 +1,8 @@
+# Notable bugfixes
+
+-   The string comparison commands `<s`, `<=s`, `==s`, `>s` and `>=s` (but not
+    `!=s`) now accept any number of arguments, as they are documented to do.
+
 # Breaking changes
 
 -   Support for the legacy `~/.elvish` directory has been removed.
