Add os:{mkdir-all symlink rename}.
This addresses #1659.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -1,3 +1,8 @@
+# Notable new features
+
+-   The `os` module has gained the following new commands: `mkdir-all`,
+    `symlink` and `rename`.
+
 # Notable bugfixes
 
 -   The string comparison commands `<s`, `<=s`, `==s`, `>s` and `>=s` (but not
