edit:kill-{left right}-alnum-word -> edit:kill-alnum-word-{left right}.
This fixes #1768.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -14,3 +14,21 @@
 
 -   The commands `!=`, `!=s` and `not-eq` now only accepts two arguments
     ([#1767](https://b.elv.sh/1767)).
+
+-   The commands `edit:kill-left-alnum-word` and `edit:kill-right-alnum-word`
+    have been renamed to `edit:kill-alnum-word-left` and
+    `edit:kill-alnum-word-right`, to be consistent with the documentation and
+    the names of other similar commands.
+
+    If you need to write code that supports both names, use `has-key` to detect
+    which name is available:
+
+    ```elvish
+    fn kill-alnum-word-left {
+        if (has-key edit: kill-alnum-word-left~) {
+            edit:kill-alnum-word-left
+        } else {
+            edit:kill-left-alnum-word
+        }
+    }
+    ```
