edit:kill-{left right}-alnum-word -> edit:kill-alnum-word-{left right}.
This fixes #1768.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -32,3 +32,6 @@
         }
     }
     ```
+
+-   The implicit cd feature has been removed and replaced by the ability to type
+    a literal path in location mode ([#1099](https://b.elv.sh/1099)).
