New md: module.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -3,6 +3,9 @@
 -   The `os` module has gained the following new commands: `mkdir-all`,
     `symlink` and `rename`.
 
+-   A new `md` module, currently containing a single function `md:show` for
+    rendering Markdown in the terminal.
+
 # Notable bugfixes
 
 -   The string comparison commands `<s`, `<=s`, `==s`, `>s` and `>=s` (but not
