Deprecate implicit cd.
This addresses #1099.

Also link to location mode from the elvdoc of cd (originally part of #1764).

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -11,6 +11,11 @@
 -   The string comparison commands `<s`, `<=s`, `==s`, `>s` and `>=s` (but not
     `!=s`) now accept any number of arguments, as they are documented to do.
 
+# Deprecations
+
+-   The implicit cd feature is now deprecated. Use `cd` or location mode
+    instead.
+
 # Breaking changes
 
 -   Support for the legacy `~/.elvish` directory has been removed.
