pkg/eval: Require "catch" when using "else" in the try command.
This addresses the comment raised in #1782.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -40,3 +40,7 @@
         }
     }
     ```
+
+-   Using `else` without `catch` in the `try` special command is no longer
+    supported. The command `try { a } else { b } finally { c }` is equivalent to
+    just `try { a; b } finally { c }`.
