Document more commands added in 0.21.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -3,6 +3,10 @@
 -   The `os` module has gained the following new commands: `mkdir-all`,
     `symlink` and `rename`.
 
+-   A new `render-styledown` command.
+
+-   A new `str:repeat` command.
+
 -   A new `md` module, currently containing a single function `md:show` for
     rendering Markdown in the terminal.
 
