pkg/eval: Implement special command "with".
This addresses #1114.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -1,5 +1,7 @@
 # Notable new features
 
+-   A new `with` command for running a lambda with temporary assignments.
+
 -   A new `keep-if` command.
 
 -   The `os` module has gained the following new commands: `mkdir-all`,
