pkg/eval: New keep-if command.
This fixes #1721.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -1,5 +1,7 @@
 # Notable new features
 
+-   A new `keep-if` command.
+
 -   The `os` module has gained the following new commands: `mkdir-all`,
     `symlink` and `rename`.
 
