pkg/eval: Fix temporary assignment for list and map elements.
This fixes #1515.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -17,6 +17,9 @@
 -   The string comparison commands `<s`, `<=s`, `==s`, `>s` and `>=s` (but not
     `!=s`) now accept any number of arguments, as they are documented to do.
 
+-   Temporary assignments now work correctly on map and list elements
+    ([#1515](https://b.elv.sh/1515)).
+
 # Deprecations
 
 -   The implicit cd feature is now deprecated. Use `cd` or location mode
