Remove the legacy temporary assignment syntax.
This fixes #1114.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -1,18 +1,19 @@
 # Notable new features
 
--   A new `with` command for running a lambda with temporary assignments.
+-   A new [`with`](../ref/language.html#with) command for running a lambda with
+    temporary assignments.
 
--   A new `keep-if` command.
+-   A new [`keep-if`](../ref/builtin.html#keep-if) command.
 
--   The `os` module has gained the following new commands: `mkdir-all`,
-    `symlink` and `rename`.
+-   The [`os`](../ref/os.html) module has gained the following new commands:
+    `mkdir-all`, `symlink` and `rename`.
 
--   A new `render-styledown` command.
+-   A new [`render-styledown`](../ref/builtin.html#render-styledown) command.
 
--   A new `str:repeat` command.
+-   A new [`str:repeat`](../ref/str.html#str:repeat) command.
 
--   A new `md` module, currently containing a single function `md:show` for
-    rendering Markdown in the terminal.
+-   A new [`md`](../ref/md.html) module, currently containing a single function
+    `md:show` for rendering Markdown in the terminal.
 
 # Notable bugfixes
 
@@ -29,7 +30,16 @@
 
 # Breaking changes
 
--   Support for the legacy `~/.elvish` directory has been removed.
+-   Support for the legacy `~/.elvish` directory, deprecated since 0.16.0, has
+    been removed. For the supported directory paths, see documentation for
+    [the Elvish command](../ref/command.html).
+
+-   Support for the legacy temporary assignment syntax (`a=b command`),
+    deprecated since 0.18.0, has been removed.
+
+    Use either the [`tmp`](../ref/language.html#tmp) command (available since
+    0.18.0) or the [`with`](../ref/language.html#with) command (available since
+    this release) instead.
 
 -   The commands `!=`, `!=s` and `not-eq` now only accepts two arguments
     ([#1767](https://b.elv.sh/1767)).
