pkg/eval: Annotate partial compilation errors.
This has both false positives (errors are not actually partial being marked as
partial) and false negatives (the other way around) for now and could use more
work, but it's at least good enough for the editor to not show any compilation
error during the process of typing out "if $true { echo $pid } else { }".

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -23,6 +23,12 @@
 -   Temporary assignments now work correctly on map and list elements
     ([#1515](https://b.elv.sh/1515)).
 
+-   The terminal line editor is now more aggressive in suppressing compilation
+    errors caused by the code not being complete.
+
+    For example, during the process of typing out `echo $pid`, the editor no
+    longer complains that `$p` is undefined when the user has typed `echo $p`.
+
 # Deprecations
 
 -   The implicit cd feature is now deprecated. Use `cd` or location mode
