Document that Elvish now turns off IXON in the release notes.

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -6,6 +6,11 @@
 -   A new `md` module, currently containing a single function `md:show` for
     rendering Markdown in the terminal.
 
+-   On Unix, Elvish now turns off output flow control (IXON) by default, freeing
+    up <kbd>Ctrl-S</kbd> and <kbd>Ctrl-Q</kbd> for keybindings.
+
+    Users who require this feature can turn it back on by running `stty ixon`.
+
 # Notable bugfixes
 
 -   The string comparison commands `<s`, `<=s`, `==s`, `>s` and `>=s` (but not
