Remove the deprecated eawk command (superseded by re:awk).

--- a/0.21.0-release-notes.md
+++ b/0.21.0-release-notes.md
@@ -41,6 +41,9 @@
 
 # Breaking changes
 
+-   The `eawk` command, deprecated since 0.20.0, has been removed. Use
+    [`re:awk`](../ref/re.html#re:awk) instead.
+
 -   Support for the legacy `~/.elvish` directory, deprecated since 0.16.0, has
     been removed. For the supported directory paths, see documentation for
     [the Elvish command](../ref/command.html).
