website: Publish release notes and binaries for 0.21.0.
Special changes to the download page for 0.21.0:

- Simplify installation script, as the 0.21.0 release archives now name the
  binary within them just "elvish".

- Add RISC-V to the CPU radiobox.

--- a/website/blog/0.21.0-release-notes.md
+++ b/website/blog/0.21.0-release-notes.md
@@ -1,3 +1,9 @@
+Elvish 0.21.0 has been released on 2024-08-14, six months after 0.20.0, bringing
+new features and bugfixes.
+
+As usual, [prebuilt binaries](https://elv.sh/get) are offered for most common
+platforms.
+
 # Notable new features
 
 -   A new [`with`](../ref/language.html#with) command for running a lambda with
