--- a/0.22.0-release-notes.md
+++ b/0.22.0-release-notes.md
@@ -2,6 +2,9 @@
 
 # Notable bugfixes
 
+-   The `lower` glob modifier (as in `echo *[lower]`) now correctly matches
+    lower-case letters. It used to match digits by mistake.
+
 # Deprecations
 
 # Breaking changes
