website: Fix typos

--- a/website/blog/0.11-release-notes.md
+++ b/website/blog/0.11-release-notes.md
@@ -76,7 +76,7 @@ As usual, prebuilt binaries can be found in [get](../get/).
     assignments ([#486](https://github.com/elves/elvish/issues/486)).
 
 -   A primitive for running functions in parallel,
-    [`run-parellel`](../ref/builtin.html#run-parallel), has been added
+    [`run-parallel`](../ref/builtin.html#run-parallel), has been added
     ([#485](https://github.com/elves/elvish/issues/485)).
 
 -   The [`splits`](../ref/builtin.html#splits) builtin now supports a `&max`
