pkg/edit: Press Ctrl-Alt-V to insert the name of the next key.
Implemented with an unstable builtin without an accompanying test for now, due
to the ongoing off-branch TUI rewrite.

This fixes #1180.

--- a/0.22.0-release-notes.md
+++ b/0.22.0-release-notes.md
@@ -1,5 +1,8 @@
 # Notable new features
 
+-   Pressing `Ctrl-Alt-V` in the REPL now enters a mode where the name of the
+    next key pressed will be inserted into the buffer.
+
 # Notable bugfixes
 
 -   The `lower` glob modifier (as in `echo *[lower]`) now correctly matches
