--- a/0.22.0-release-notes.md
+++ b/0.22.0-release-notes.md
@@ -3,6 +3,10 @@
 -   Pressing `Ctrl-Alt-V` in the REPL now enters a mode where the name of the
     next key pressed will be inserted into the buffer.
 
+-   The `epm` module no longer depends on Unix commands like `mkdir` and is now
+    compatible with a stock Windows installation. It still depends on commands
+    needed for downloading packages (typically `git` or `rsync`).
+
 # Notable bugfixes
 
 -   The `lower` glob modifier (as in `echo *[lower]`) now correctly matches
